# ie0217

./: Makefile  README.md
.github/workflows/: CI-CD.yml  CI-CP.yml
CalculatorProject/tests/: CMakeLists.txt
Laboratorios/Laboratorio1/: main.cpp
Laboratorios/Laboratorio10/: CMakeLists.txt  README.md
Laboratorios/Laboratorio10/CalculatorProject/: CMakeLists.txt
Laboratorios/Laboratorio10/CalculatorProject/src/: Calculator.cpp  Calculator.hpp
Laboratorios/Laboratorio10/CalculatorProject/tests/: test_calculator.cpp
Laboratorios/Laboratorio11/: Bts.cpp  Bts.hpp  README.md  main.cpp
Laboratorios/Laboratorio2/: README.md
Laboratorios/Laboratorio2/src/: funciones.cpp  funciones.hpp  libro.hpp  main.cpp
Laboratorios/Laboratorio3/: README.md
Laboratorios/Laboratorio3/src/: Empleado.cpp  Empleado.hpp  EmpleadoMedioTiempo.cpp  EmpleadoMedioTiempo.hpp  EmpleadoTiempoCompleto.cpp  EmpleadoTiempoCompleto.hpp  main.cpp
Laboratorios/Laboratorio4/: README.md
Laboratorios/Laboratorio5/: README.md
Laboratorios/Laboratorio5/src/: Sorting.cpp  Sorting.hpp  main.cpp
Laboratorios/Laboratorio6/: Makefile  README.md
Laboratorios/Laboratorio6/data/: file1.txt  file2.txt
Laboratorios/Laboratorio6/src/: Exceptions.hpp  FileReader.hpp  RegexUtils.hpp  TextProcessor.hpp  main.cpp
Laboratorios/Laboratorio8/: conditions_race.cpp  deadlock.cpp  multitask.cpp  parallel_sum.cpp  productor_consumidor.cpp
Laboratorios/Laboratorio9/: Ejerc1.cpp  Ejerc2.cpp  Ejerc3.cpp  Ejerc4.cpp  README.md
Sesiones/Sesion1/: holaMundo.cpp  otroArchivo.cpp
Sesiones/Sesion10/: README.md
Sesiones/Sesion11/: README.md
Sesiones/Sesion12/: README.md  SQLite.cpp
Sesiones/Sesion13/: AtlasConection.cpp  MongoDB.cpp  README.md
Sesiones/Sesion14/: PrograParalelConcurr.cpp  README.md
Sesiones/Sesion15/: Prueba1.cpp  PruebaAsan.cpp  PruebaValgrind.cpp  README.md
Sesiones/Sesion16/: README.md
Sesiones/Sesion16/Gtesting/CalculatorTests/: CMakeLists.txt  calculator.h  test_calculator.cpp
Sesiones/Sesion16/RandomSeed/: RandomSeed.cpp
Sesiones/Sesion2/: README.md  anidacionSentencia.cpp  argumentosFunciones.cpp  arrays.cpp  entradasUsuario.cpp  estructura2.cpp  estructuras.cpp  funciones.cpp  helloworld.cpp  loops.cpp  prototipoFuncion.cpp  scopes2.cpp  sobreCarga.cpp  sobreCarga2.cpp  switchCase.cpp  variablesScope.cpp  variablesnAlcance.cpp
Sesiones/Sesion3/: README.md  define.cpp  enum.cpp  goTo.cpp  main.cpp  memoria.cpp  punteros.cpp  punterosArreglos.cpp  punterosFunciones.cpp  recursividad.cpp  sum.cpp  sum.hpp  typeCasting.cpp
Sesiones/Sesion4/: README.md  animal.cpp  class.cpp  destructor.cpp  herencia.cpp  protectedMembers.cpp  sobreEscritura.cpp  sobrecargaOperadores.cpp  student.cpp  student2.cpp
Sesiones/Sesion4/Ejercicio/: main.cpp  student.cpp  student.hpp
Sesiones/Sesion4/Persona/: main.cpp  persona.cpp  persona.hpp
Sesiones/Sesion5/: README.md  elementosDinamic.cpp  estrucDatosPilas.cpp  listaselace.cpp  memDinamica.cpp  memoria.cpp  queues.cpp  tree.cpp
Sesiones/Sesion6/: BubbleSort.cpp  InsertionSort.cpp  QuickSort.cpp  README.md  SelectionSort.cpp
Sesiones/Sesion7/: AlgoritmosSTL.cpp  Containers.cpp  README.md  iterators.cpp
Sesiones/Sesion8/: ClassTemplate.cpp  ClassTemplateMultipParam.cpp  Excepciones.cpp  FunctionTemplate.cpp  MultiExceptions.cpp  README.md
Sesiones/Sesion9/: README.md  Regex.cpp
Sesiones/Sesion9/Biblioteca/: Makefile  biblioteca.cpp  biblioteca.hpp  libro.cpp  libro.hpp  main.cpp
Tareas/Tarea1/: Makefile  README.md
Tareas/Tarea2/: Makefile  README.md
Tareas/Tarea3/: Makefile  README.md
Tareas/Tarea4/: README.md
Tareas/Tarea5/: Makefile  README.md
Tareas/Tarea6/: README.md
Tareas/Tarea7/: README.md
Tareas/Tarea7/CircuitProject/: CMakeLists.txt  Makefile
Tareas/Tarea7/CircuitProject/src/: Circuito.cpp  Circuito.hpp  Inventario.cpp  Inventario.hpp  main.cpp
Tareas/Tarea7/CircuitProject/test/: CMakeLists.txt  test.cpp
Tareas/Tarea7/CircuitProject/tests/: CMakeLists.txt  test.cpp
(+75 files in other folders)
